@@ -70,6 +70,11 @@ xine-lib (1.1.90) (Unreleased)
   * Report more video output capabilities via (port)->get_capabilities():
     colour controls, zooming, colour keying.
 
+xine-lib (1.1.19) 2010-??-??
+  * Handle odd widths properly (for ffmpeg-decoded video).
+  * Make buildable with current (external) libdvdnav & libdvdread.
+  * Fix V4L2 check.
+
 xine-lib (1.1.18.1) 2010-03-06
   * Oops. compat.c (for DXR3 support) was omitted.
   * Fix up V4L/V4L2 compilation. Some non-Linux have V4L2 but not V4L.
